# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  pre-commit.yml
src/hello/: main.py
tests/: test_main.py
