[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1"
description = "python-template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]

[project.optional-dependencies]

[tool.uv]
override-dependencies = [
]

[dependency-groups]
dev = [
    "black",
    "debugpy",
    "ipython",
    "matplotlib",
    "nvitop",
    "pre-commit",
    "pytest",
]
